# evdscpp

./: .env_example  .gitignore  CMakeLists.txt  Makefile  README.md  diagram.md  example.txt  project.mmd
.github/workflows/: cmake-single-platform.yml
include/: cache.h  dataframe.h  dotenv_.h  e_utils.h  get.h  get_series.h  header.h  index.h  json.h  series.h  shorten.h  types.h  url_builder.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_dataframe.cpp
